# ltl-translator

./: .clang-format  .clang-tidy  .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml
app/: CMakeLists.txt  main.cpp  unfolding.cpp
docs/: CMakeLists.txt
docs/engineering/: .gitignore  approach.tex  architecture.drawio  workflow.tex
output/: test.lna  test.prop.lna
src/: CMakeLists.txt
src/dcr2cpn/: CMakeLists.txt
src/dcr2cpn/include/: dcr2cpn.hpp
src/dcr2cpn/src/: CMakeLists.txt  DCR.cpp  dcr2cpn.cpp
src/helena/: CMakeLists.txt
src/helena/include/: Helena.hpp  LNAAnalyser.hpp
src/helena/src/: CMakeLists.txt  Helena.cpp  LNAAnalyser.cpp
src/ltl2prop/: CMakeLists.txt
src/ltl2prop/include/: LTLtranslator.hpp
src/ltl2prop/src/: CMakeLists.txt  LTLtranslator.cpp
src/unfolder/: CMakeLists.txt
src/unfolder/include/: LNAAnalyser.hpp  LTLtranslator.hpp  unfolder.hpp
src/unfolder/src/: CMakeLists.txt  LNAAnalyser.cpp  LTLtranslator.cpp  unfolder.cpp
src/utils/: CMakeLists.txt
src/utils/include/: utils.hpp
src/utils/src/: CMakeLists.txt  utils.cpp
test/: blindAuction.ast  blindAuction.ast.json  blindAuction.sol  etherGame.sol  etherLotto.ast  etherLotto.ast.json  etherLotto.sol  ltl.json
test/blindAuction/: blindAuction.ast.json
test/etherGame/: etherGame.ast  etherGame.ast.json  etherGame.json  etherGame.lna  formula.json  formula_general.json  formula_specific.json  initialMarking.json
test/etherLotto/: etherLotto.lna
